# Authority-Tracker

./: .env.example  AGENTS.md  CHANGELOG.md  TODO.md  database.py  index.html  main.py  models.py  pyproject.toml  schemas.py  script.js  session-ses_37e3.md  session-ses_3824.md  style.css  tracker.db
.codemachine/: template.json
.codemachine/agents/: ab-logic.md  ab-tests.md  ab-ui.md  agents-config.json
.codemachine/logs/: registry.db-shm  registry.db-wal
backend/: .env.example  Dockerfile  authority_tracker.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-02-21_add_game_models.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/v1/: __init__.py  games.py  health.py
backend/app/commands/: seed.py
backend/app/core/: config.py  logfire_setup.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  game.py
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: game.py
backend/app/services/: __init__.py
backend/app/socketio/: server.py
backend/app/worker/tasks/: ship_ai.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_core.py  test_repositories.py
backend/tests/api/: test_exceptions.py  test_health.py  test_items.py
docs/: development.md
frontend/: instrumentation.ts  next.config.js  package-lock.json  package.json
frontend/e2e/: auth.setup.ts  auth.spec.ts  chat.spec.ts  home.spec.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/(dashboard)/profile/: page.tsx
frontend/src/components/: language-switcher.tsx
frontend/src/components/chat/: chat-container.tsx  tool-approval-dialog.tsx
frontend/src/components/game/: GameTracker.tsx  MenuOverlay.tsx  SetupScreen.tsx  TrackerWidget.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/hooks/: use-chat.ts  use-local-chat.ts  useGameState.ts
frontend/src/i18n/: request.ts  routing.ts
frontend/src/stores/: auth-store.test.ts  local-chat-store.ts
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py
