[project]
name = "authority-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "google-cloud-texttospeech>=2.34.0",
    "google-genai>=1.64.0",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
    "python-socketio>=5.16.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
